tests/parser/parser-enum.swg
enum  { } // swc-expected-error ParserExpectedTokenAfter
enum enum { }